--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello Esprit Libre</title>
+    
+    <title><strong>Hello Esprit Libre<strong></title>
   </head>
-  <body>
-    <p>Hello GitParty</p>
-    <p>First Session</p>
-  <body>
+  <body color="gray">
+    <p color="red">>Hello GitParty</p>
+    <p color="pink">First Session</p>
+ 
+  </body>
 </html>
